v1.2.26/_sources/index.rst.txt

🛠️ Welcome to Stouputils Documentation
====================================================================================================


**Versions**: `latest <../latest/index.html>`_, `v1.2.25 <../v1.2.25/index.html>`_, `v1.2.24 <../v1.2.24/index.html>`_, `v1.2.23 <../v1.2.23/index.html>`_, `v1.2.22 <../v1.2.22/index.html>`_, `v1.2.21 <../v1.2.21/index.html>`_, `v1.2.20 <../v1.2.20/index.html>`_, `v1.2.19 <../v1.2.19/index.html>`_, `v1.2.18 <../v1.2.18/index.html>`_, `v1.2.17 <../v1.2.17/index.html>`_, `v1.2.16 <../v1.2.16/index.html>`_, `v1.2.13 <../v1.2.13/index.html>`_, `v1.2.12 <../v1.2.12/index.html>`_, `v1.2.11 <../v1.2.11/index.html>`_, `v1.2.10 <../v1.2.10/index.html>`_, `v1.2.9 <../v1.2.9/index.html>`_, `v1.2.8 <../v1.2.8/index.html>`_, `v1.2.7 <../v1.2.7/index.html>`_, `v1.2.4 <../v1.2.4/index.html>`_, `v1.2.2 <../v1.2.2/index.html>`_, `v1.2.1 <../v1.2.1/index.html>`_, `v1.2.0 <../v1.2.0/index.html>`_, `v1.0.22 <../v1.0.22/index.html>`_, `v1.0.21 <../v1.0.21/index.html>`_

.. role:: raw-html-m2r(raw)
   :format: html


🛠️ Project Badges
=================


.. image:: https://img.shields.io/github/v/release/Stoupy51/stouputils?logo=github&label=GitHub
   :target: https://github.com/Stoupy51/stouputils/releases/latest
   :alt: GitHub


.. image:: https://img.shields.io/pypi/dm/stouputils?logo=python&label=PyPI%20downloads
   :target: https://pypi.org/project/stouputils/
   :alt: PyPI - Downloads


.. image:: https://img.shields.io/github/v/release/Stoupy51/stouputils?logo=sphinx&label=Documentation&color=purple
   :target: https://stoupy51.github.io/stouputils/latest/
   :alt: Documentation


:raw-html-m2r:`<br>`

📚 Project Overview
===================

Stouputils is a collection of utility modules designed to simplify and enhance the development process.\ :raw-html-m2r:`<br>`
It includes a range of tools for tasks such as execution of doctests, display utilities, decorators, as well as context managers.

🚀 Project File Tree
====================


.. raw:: html

   <style>
   .code-tree {
       border-radius: 6px; 
       padding: 16px; 
       font-family: monospace; 
       line-height: 1.45; 
       overflow: auto; 
       white-space: pre;
       background-color:rgb(43, 43, 43);
       color: #d4d4d4;
   }
   .code-tree a {
       color: #569cd6;
       text-decoration: none;
   }
   .code-tree a:hover {
       text-decoration: underline;
   }
   .code-tree .comment {
       color:rgb(231, 213, 48);
   }
   </style>



.. raw:: html

   <pre class="code-tree">stouputils/
   ├── <a href="https://stoupy51.github.io/stouputils/latest/modules/stouputils.applications.html">applications/</a>
   │   ├── <a href="https://stoupy51.github.io/stouputils/latest/modules/stouputils.applications.automatic_docs.html">automatic_docs.py</a>    <span class="comment"># 📚 Documentation generation utilities (used to create this documentation)</span>
   │   └── ...
   │
   ├── <a href="https://stoupy51.github.io/stouputils/latest/modules/stouputils.continuous_delivery.html">continuous_delivery/</a>
   │   ├── <a href="https://stoupy51.github.io/stouputils/latest/modules/stouputils.continuous_delivery.cd_utils.html">cd_utils.py</a>          <span class="comment"># 🔧 Common utilities for continuous delivery</span>
   │   ├── <a href="https://stoupy51.github.io/stouputils/latest/modules/stouputils.continuous_delivery.github.html">github.py</a>            <span class="comment"># 📦 GitHub utilities (upload_to_github)</span>
   │   ├── <a href="https://stoupy51.github.io/stouputils/latest/modules/stouputils.continuous_delivery.pypi.html">pypi.py</a>              <span class="comment"># 📦 PyPI utilities (pypi_full_routine)</span>
   │   ├── <a href="https://stoupy51.github.io/stouputils/latest/modules/stouputils.continuous_delivery.pyproject.html">pyproject.py</a>         <span class="comment"># 📝 Pyproject.toml utilities</span>
   │   └── ...
   │
   ├── <a href="https://stoupy51.github.io/stouputils/latest/modules/stouputils.all_doctests.html">all_doctests.py</a>          <span class="comment"># ✅ Execution of all doctests for a given path</span>
   ├── <a href="https://stoupy51.github.io/stouputils/latest/modules/stouputils.archive.html">archive.py</a>               <span class="comment"># 📦 Archive utilities (zip, repair_zip)</span>
   ├── <a href="https://stoupy51.github.io/stouputils/latest/modules/stouputils.backup.html">backup.py</a>                <span class="comment"># 📦 Backup utilities (delta backup, consolidate)</span>
   ├── <a href="https://stoupy51.github.io/stouputils/latest/modules/stouputils.collections.html">collections.py</a>           <span class="comment"># 🧰 Collection utilities (unique_list)</span>
   ├── <a href="https://stoupy51.github.io/stouputils/latest/modules/stouputils.ctx.html">ctx.py</a>                   <span class="comment"># 🚫 Context managers (Muffle, LogToFile)</span>
   ├── <a href="https://stoupy51.github.io/stouputils/latest/modules/stouputils.decorators.html">decorators.py</a>            <span class="comment"># 🎯 Decorators (silent, measure_time, error_handler, simple_cache)</span>
   ├── <a href="https://stoupy51.github.io/stouputils/latest/modules/stouputils.image.html">image.py</a>                 <span class="comment"># 🖼️ Image utilities (image_resize)</span>
   ├── <a href="https://stoupy51.github.io/stouputils/latest/modules/stouputils.io.html">io.py</a>                    <span class="comment"># 💻 I/O utilities (file management, json)</span>
   ├── <a href="https://stoupy51.github.io/stouputils/latest/modules/stouputils.parallel.html">parallel.py</a>              <span class="comment"># 🧑‍🤝‍🧑 Parallel processing (multiprocessing, multithreading)</span>
   ├── <a href="https://stoupy51.github.io/stouputils/latest/modules/stouputils.print.html">print.py</a>                 <span class="comment"># 🖨️ Display utilities (info, debug, warning, error)</span>
   └── ...
   </pre>


⭐ Star History
---------------


.. raw:: html

   <html>
       <a href="https://star-history.com/#Stoupy51/stouputils&Date">
           <picture>
               <source media="(prefers-color-scheme: dark)" srcset="https://api.star-history.com/svg?repos=Stoupy51/stouputils&type=Date&theme=dark" />
               <source media="(prefers-color-scheme: light)" srcset="https://api.star-history.com/svg?repos=Stoupy51/stouputils&type=Date" />
               <img alt="Star History Chart" src="https://api.star-history.com/svg?repos=Stoupy51/stouputils&type=Date" />
           </picture>
       </a>
   </html>



📖 Module Documentation
----------------------------------------------------------------------------------------------------

.. toctree::
   :maxdepth: 10

   modules/stouputils

